site/web/app/themes/lustrum-virgiel-xxiv/resources/assets/styles/components/_content.scss
body.single,
body.template-lustrumevenement {
  .content {
    .breadcrumb {
      margin: 0;
    }

    hr {
      margin: 0.25rem 0 2rem;
      background-color: lighten($dark-blue-bg, 20%);
      height: 2px;
    }

    .social-share {
      display: flex;
      flex-flow: row wrap;
      justify-content: center;

      .share-button {
        color: #fff;

        &:not(:last-of-type) {
          margin: 0 8px 8px 0;
        }

        svg {
          fill: #fff;
          width: 19px;
          height: 19px;
          margin-right: 4px;
        }

        &.facebook {
          background-color: #4a66b7;

          &:hover {
            background-color: darken(#4a66b7, 10%);
          }
        }

        &.whatsapp {
          background-color: #25d366;

          &:hover {
            background-color: darken(#25d366, 10%);
          }
        }
      }
    }
  }
}

body.single,
body.page:not(.template-media-overview):not(.home) {
  main {
    .table-overflow {
      overflow-x: auto;
    }

    min-height: 120px;

    h2 {
      display: inline-flex;
      padding: 8px;
      border: 3px solid $piekweek-primary;
      font-weight: bold;

      &:first-of-type {
        margin-top: 0;
      }
    }

    h3 {
      display: inline-flex;
      font-weight: bold;
      padding-bottom: 4px;
      border-bottom: 3px solid $lustrumweek-primary;
    }

    table tr:hover {
      background-color: $lustrumweek-primary;
    }
  }
}

